@@ -1,3 +1,5 @@
+* Avoid breaking Element.prototype in browsers which support it. Closes #11004. [cfis, Tobie Langel]
+
 * Prevent Enumerable#eachSlice from entering into an endless loop if passed an argument smaller than 1. Closes #10665. [kangax, Tobie Langel]
 
 * Allow Selector to correctly detect the presence of namespaced attributes. Closes #10987. [Samuel Lebeau, Tobie Langel]
